Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,8 @@
 
         steps:
         - task: Docker@2
-          displayName: Build an image
           inputs:
-            repository: $(imageName)
-            command: build
+            containerRegistry: 'dockerweb'
+            repository: 'javadocker'
+            command: 'buildAndPush'
             Dockerfile: app/Dockerfile
