Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -11,3 +11,8 @@ steps:
     repository: 'javarepo'
     command: 'buildAndPush'
     Dockerfile: 'app/Dockerfile'
+
+- task: PublishPipelineArtifact@1
+  inputs:
+      artifactName: 'manifests'
+      path: 'manifests'
