Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,18 +1,47 @@
 
+stages:
+- stage: Build
+  jobs:
+  - job: Build
+    pool:
+      vmImage: ubuntu-latest
 
-pool:
-  vmImage: ubuntu-latest
+    steps:
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'whcca927_docker'
+        repository: 'javarepo'
+        command: 'buildAndPush'
+        Dockerfile: 'app/Dockerfile'
 
-steps:
+    - task: PublishPipelineArtifact@1
+      inputs:
+          artifactName: 'manifests'
+          path: 'manifests'
 
-- task: Docker@2
-  inputs:
-    containerRegistry: 'whcca927_docker'
-    repository: 'javarepo'
-    command: 'buildAndPush'
-    Dockerfile: 'app/Dockerfile'
-
-- task: PublishPipelineArtifact@1
-  inputs:
-      artifactName: 'manifests'
-      path: 'manifests'
+- stage: deploy 
+  jobs: 
+  - deployment: mydeploy 
+    environment: k8scluster
+    pool: 
+       vmImage: ubuntu-latest
+    strategy:
+     runOnce:
+       deploy: 
+         steps:
+          - task: KubernetesManifest@0
+            inputs:
+              action: 'createSecret'
+              kubernetesServiceConnection: 'k8scluster-default-1675676844693'
+              namespace: 'default'
+              secretType: 'dockerRegistry'
+              secretName: 'imagepullsecret'
+              dockerRegistryEndpoint: 'whcca927_docker'
+          - task: KubernetesManifest@0
+            inputs:
+              action: 'deploy'
+              kubernetesServiceConnection: 'k8scluster-default-1675676844693'
+              namespace: 'default'
+              manifests: 'manifests/deployment.yml'
+              containers: '$(containerRegistry)/javarepo'
+              imagePullSecrets: 'imagepullsecret'
