Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -34,7 +34,7 @@ stages:
                buildType: 'current'
                downloadType: 'single'
                artifactName: 'manifests'
-               downloadPath: '$(System.ArtifactsDirectory)'
+               downloadPath: '$(System.ArtifactsDirectory)/manifests'
        deploy: 
          steps:
           - task: KubernetesManifest@0
